@@ -449,6 +449,30 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ExecutorService
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Executors
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|LinkedBlockingQueue
 import|;
 end_import
@@ -638,6 +662,11 @@ name|int
 name|handlerCount
 decl_stmt|;
 comment|// number of handler threads
+specifier|private
+name|int
+name|readThreads
+decl_stmt|;
+comment|// number of read threads
 specifier|protected
 name|Class
 argument_list|<
@@ -1015,6 +1044,19 @@ literal|null
 decl_stmt|;
 comment|//the selector that we use for the server
 specifier|private
+name|Reader
+index|[]
+name|readers
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|int
+name|currentReader
+init|=
+literal|0
+decl_stmt|;
+specifier|private
 name|InetSocketAddress
 name|address
 decl_stmt|;
@@ -1055,6 +1097,10 @@ literal|"ipc.server.listen.queue.size"
 argument_list|,
 literal|128
 argument_list|)
+decl_stmt|;
+specifier|private
+name|ExecutorService
+name|readPool
 decl_stmt|;
 specifier|public
 name|Listener
@@ -1119,6 +1165,70 @@ operator|.
 name|open
 argument_list|()
 expr_stmt|;
+name|readers
+operator|=
+operator|new
+name|Reader
+index|[
+name|readThreads
+index|]
+expr_stmt|;
+name|readPool
+operator|=
+name|Executors
+operator|.
+name|newFixedThreadPool
+argument_list|(
+name|readThreads
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|readThreads
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|Selector
+name|readSelector
+init|=
+name|Selector
+operator|.
+name|open
+argument_list|()
+decl_stmt|;
+name|Reader
+name|reader
+init|=
+operator|new
+name|Reader
+argument_list|(
+name|readSelector
+argument_list|)
+decl_stmt|;
+name|readers
+index|[
+name|i
+index|]
+operator|=
+name|reader
+expr_stmt|;
+name|readPool
+operator|.
+name|execute
+argument_list|(
+name|reader
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Register accepts on the server socket with the selector.
 name|acceptChannel
 operator|.
@@ -1147,6 +1257,255 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
+specifier|private
+class|class
+name|Reader
+implements|implements
+name|Runnable
+block|{
+specifier|private
+specifier|volatile
+name|boolean
+name|adding
+init|=
+literal|false
+decl_stmt|;
+specifier|private
+name|Selector
+name|readSelector
+init|=
+literal|null
+decl_stmt|;
+name|Reader
+parameter_list|(
+name|Selector
+name|readSelector
+parameter_list|)
+block|{
+name|this
+operator|.
+name|readSelector
+operator|=
+name|readSelector
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Starting SocketReader"
+argument_list|)
+expr_stmt|;
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+while|while
+condition|(
+name|running
+condition|)
+block|{
+name|SelectionKey
+name|key
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|readSelector
+operator|.
+name|select
+argument_list|()
+expr_stmt|;
+while|while
+condition|(
+name|adding
+condition|)
+block|{
+name|this
+operator|.
+name|wait
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
+name|Iterator
+argument_list|<
+name|SelectionKey
+argument_list|>
+name|iter
+init|=
+name|readSelector
+operator|.
+name|selectedKeys
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|key
+operator|=
+name|iter
+operator|.
+name|next
+argument_list|()
+expr_stmt|;
+name|iter
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|key
+operator|.
+name|isValid
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|key
+operator|.
+name|isReadable
+argument_list|()
+condition|)
+block|{
+name|doRead
+argument_list|(
+name|key
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|key
+operator|=
+literal|null
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+name|running
+condition|)
+block|{
+comment|// unexpected -- log it
+name|LOG
+operator|.
+name|info
+argument_list|(
+name|getName
+argument_list|()
+operator|+
+literal|"caught: "
+operator|+
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ex
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Error in Reader"
+argument_list|,
+name|ex
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
+comment|/**        * This gets reader into the state that waits for the new channel        * to be registered with readSelector. If it was waiting in select()        * the thread will be woken up, otherwise whenever select() is called        * it will return even if there is nothing to read and wait        * in while(adding) for finishAdd call        */
+specifier|public
+name|void
+name|startAdd
+parameter_list|()
+block|{
+name|adding
+operator|=
+literal|true
+expr_stmt|;
+name|readSelector
+operator|.
+name|wakeup
+argument_list|()
+expr_stmt|;
+block|}
+specifier|public
+specifier|synchronized
+name|SelectionKey
+name|registerChannel
+parameter_list|(
+name|SocketChannel
+name|channel
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|channel
+operator|.
+name|register
+argument_list|(
+name|readSelector
+argument_list|,
+name|SelectionKey
+operator|.
+name|OP_READ
+argument_list|)
+return|;
+block|}
+specifier|public
+specifier|synchronized
+name|void
+name|finishAdd
+parameter_list|()
+block|{
+name|adding
+operator|=
+literal|false
+expr_stmt|;
+name|this
+operator|.
+name|notify
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 comment|/** cleanup connections from connectionList. Choose a random range      * to scan and also have a limit on the number of the connections      * that will be cleanedup per run. The criteria for cleanup is the time      * for which the connection was idle. If 'force' is true then all      * connections will be looked at for the cleanup.      * @param force all connections will be looked at for cleanup      */
 specifier|private
@@ -1469,19 +1828,6 @@ argument_list|(
 name|key
 argument_list|)
 expr_stmt|;
-elseif|else
-if|if
-condition|(
-name|key
-operator|.
-name|isReadable
-argument_list|()
-condition|)
-name|doRead
-argument_list|(
-name|key
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 catch|catch
@@ -1582,37 +1928,6 @@ name|Exception
 name|ignored
 parameter_list|)
 block|{}
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e
-parameter_list|)
-block|{
-if|if
-condition|(
-name|running
-condition|)
-block|{
-comment|// unexpected -- log it
-name|LOG
-operator|.
-name|info
-argument_list|(
-name|getName
-argument_list|()
-operator|+
-literal|" caught: "
-operator|+
-name|StringUtils
-operator|.
-name|stringifyException
-argument_list|(
-name|e
-argument_list|)
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 catch|catch
@@ -1805,37 +2120,23 @@ operator|.
 name|channel
 argument_list|()
 decl_stmt|;
-comment|// accept up to 10 connections
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-literal|10
-condition|;
-name|i
-operator|++
-control|)
-block|{
 name|SocketChannel
 name|channel
-init|=
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|channel
+operator|=
 name|server
 operator|.
 name|accept
 argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|channel
-operator|==
+operator|)
+operator|!=
 literal|null
 condition|)
-return|return;
+block|{
 name|channel
 operator|.
 name|configureBlocking
@@ -1863,18 +2164,27 @@ argument_list|(
 name|tcpKeepAlive
 argument_list|)
 expr_stmt|;
+name|Reader
+name|reader
+init|=
+name|getReader
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|reader
+operator|.
+name|startAdd
+argument_list|()
+expr_stmt|;
 name|SelectionKey
 name|readKey
 init|=
-name|channel
+name|reader
 operator|.
-name|register
+name|registerChannel
 argument_list|(
-name|selector
-argument_list|,
-name|SelectionKey
-operator|.
-name|OP_READ
+name|channel
 argument_list|)
 decl_stmt|;
 name|c
@@ -1945,6 +2255,15 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|reader
+operator|.
+name|finishAdd
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 name|void
@@ -2157,6 +2476,36 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|readPool
+operator|.
+name|shutdownNow
+argument_list|()
+expr_stmt|;
+block|}
+comment|// The method that will return the next reader to work with
+comment|// Simplistic implementation of round robin for now
+name|Reader
+name|getReader
+parameter_list|()
+block|{
+name|currentReader
+operator|=
+operator|(
+name|currentReader
+operator|+
+literal|1
+operator|)
+operator|%
+name|readers
+operator|.
+name|length
+expr_stmt|;
+return|return
+name|readers
+index|[
+name|currentReader
+index|]
+return|;
 block|}
 block|}
 comment|// Sends responses of RPC back to clients.
@@ -4665,6 +5014,19 @@ operator|=
 name|handlerCount
 operator|*
 name|MAX_QUEUE_SIZE_PER_HANDLER
+expr_stmt|;
+name|this
+operator|.
+name|readThreads
+operator|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+literal|"ipc.server.read.threadpool.size"
+argument_list|,
+literal|10
+argument_list|)
 expr_stmt|;
 name|this
 operator|.
